--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
     <title>About page</title>
 </head>
 <body>
-    this is about page
+    This is about page
+    <h1>This is new feature</h1>
 </body>
 </html>
