--- a/contact.html
+++ b/contact.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>News page</title>
+    <title>contact form</title>
 </head>
 <body>
-    This is news page
+    This is contact form
     <h1>This is new feature</h1>
+    
 </body>
 </html>
